# feeds.fun

./: .dockerignore  .gitignore  .taskrc  AGENTS.md  ATTRIBUTION.md  CHANGELOG.md  LICENSE  README.md  TODO.org  consistency.toml  depmesh.toml  docker-compose.yml  donna.toml  notes.md  package-lock.json  todo.md  todo.org  todos.org
ffun/: CHANGELOG.md  README.md  pyproject.toml  tach.toml  tach_map_query.py  yoyo.ini
ffun/ffun/: conftest.py
ffun/ffun/api/: dependencies.py  entities.py  front_events.py  http_handlers.py  settings.py
ffun/ffun/api/consent/: __init__.py  http_handlers.py
ffun/ffun/api/root/: http_handlers.py  settings.py
ffun/ffun/api/spa/: entities.py  front_events.py  http_handlers.py  settings.py
ffun/ffun/application/: application.py  errors.py  marketing.py  resources.py  settings.py  user_settings.py  utils.py  workers.py
ffun/ffun/application/tests/: test_settings.py
ffun/ffun/auth/: dependencies.py  domain.py  errors.py  settings.py  supertokens.py
ffun/ffun/auth/idps/: keycloak.py  no_idp.py  ory.py  plugin.py
ffun/ffun/auth/tests/: fixtures.py  test_dependencies.py  test_domain.py
ffun/ffun/cli/: application.py  cli.py  p.py  q.py  r.py  t.py  w.py  x.py  y.py  z.py
ffun/ffun/cli/commands/: cleaner.py  configs.py  debug.py  discover_tags.py  dispatcher.py  entries.py  estimates.py  experiments.py  failed_entries.py  feeds.py  fixtures.py  load_feeds.py  load_opml.py  meta.py  metrics.py  processors_quality.py  profile.py  queues.py  server.py  supertokens.py  user_settings.py  users.py  workers.py  yoyo.py
ffun/ffun/core/: api.py  background_tasks.py  entities.py  errors.py  json.py  logging.py  metrics.py  middlewares.py  migrations.py  plugins.py  postgresql.py  register.py  sentry.py  settings.py  text.py  utils.py
ffun/ffun/core/tests/: helpers.py  make.py  test_logging.py  test_metrics.py  test_middlewares.py  test_plugins.py
ffun/ffun/data_protection/: domain.py
ffun/ffun/data_protection/tests/: test_domain.py
ffun/ffun/dispatcher/: __init__.py  background_dispatcher.py  domain.py  entities.py  errors.py  operations.py  settings.py
ffun/ffun/dispatcher/migrations/: 20260513_02_Bc4dE-entry-processing-status.py
ffun/ffun/dispatcher/tests/: helpers.py  make.py  test_background_dispatcher.py  test_domain.py  test_operations.py
ffun/ffun/domain/: datetime_intervals.py  domain.py  entities.py  errors.py  http.py  urls.py
ffun/ffun/domain/tests/: test_datetime_intervals.py  test_http.py  test_urls.py
ffun/ffun/feeds/: domain.py  entities.py  errors.py  operations.py  utils.py
ffun/ffun/feeds/migrations/: 20230329_01_ilwfq-feeds-table.py  20230426_01_IiF5m-add-title-and-description.py  20240504_01_vBDVJ-column-for-feed-unique-id.py  20240504_02_gEapd-fill-uids-for-feeds.py  20240512_01_jL7Mt-turn-on-unique-uids.py  20240928_01_OEKOr-source-table.py  20260529_01_c0DeX-feed-site-url.py
ffun/ffun/feeds/parsers/: feedly.py
ffun/ffun/feeds/tests/: fixtures.py  make.py  test_domain.py  test_operations.py  test_utils.py
ffun/ffun/feeds_collections/: collections.py  domain.py  entities.py  errors.py  predefines.py  settings.py
ffun/ffun/feeds_collections/collections/: artificial_intelligence.py  feeds_fun.py  gamedev.py
ffun/ffun/feeds_collections/tests/: fixtures.py  test_collections.py
ffun/ffun/feeds_discoverer/: domain.py  entities.py
ffun/ffun/feeds_discoverer/tests/: make.py  test_domain.py
ffun/ffun/feeds_links/: domain.py  entities.py  operations.py
ffun/ffun/feeds_links/migrations/: 20230427_01_9HuHj-add-feeds-links.py
ffun/ffun/feeds_links/tests/: test_domain.py  test_operations.py
ffun/ffun/google/: client.py  entities.py  errors.py  provider_interface.py  settings.py
ffun/ffun/google/tests/: test_provider_interface.py
ffun/ffun/integrations/: plugin.py  settings.py
ffun/ffun/integrations/plugins/: arxiv.py  fake.py  github.py  hacker_news.py  reddit.py  youtube.py
ffun/ffun/integrations/tests/: helpers.py  test_plugin.py
ffun/ffun/librarian/: background_processors.py  domain.py  entities.py  errors.py  history_of_gpt_rules.py  openai_client.py  operations.py  settings.py  tag_extractors.py  tags.py  text_cleaners.py
ffun/ffun/librarian/fixtures/: tag_processors.toml
ffun/ffun/librarian/migrations/: 20230405_01_H2Xia-librarian-tables.py  20240313_01_Yv74T-processors-pointers.py  20240319_01_MTJyn-migrate-to-processors-queue.py  20260507_01_c0DeX-drop-deprecated-librarian-queues.py  20260513_03_c0DeX-drop-failed-entries.py
ffun/ffun/librarian/processors/: base.py  domain.py  llm_general.py  native_tags.py  openai_chat_3_5.py  openai_chat_3_5_functions.py  openai_general.py  (+1 more)
ffun/ffun/llms_framework/: domain.py  entities.py  errors.py  keys_rotator.py  keys_statuses.py  provider_interface.py  providers.py  settings.py
ffun/ffun/loader/: background_loader.py  domain.py  entities.py  errors.py  operations.py  settings.py
ffun/ffun/markers/: domain.py  entities.py  operations.py  settings.py
ffun/ffun/meta/: domain.py  settings.py
ffun/ffun/ontology/: cache.py  domain.py  entities.py  errors.py  operations.py  settings.py  utils.py
ffun/ffun/openai/: client.py  entities.py  errors.py  keys_rotator.py  keys_statuses.py  provider_interface.py  settings.py
ffun/ffun/parsers/: domain.py  entities.py  errors.py  feed.py  feedly.py  opml.py
ffun/ffun/predefined_feeds/: entities.py  predefines.py  science.py
ffun/ffun/processors_quality/: domain.py  entities.py  errors.py  knowlege_base.py
ffun/ffun/product/: __init__.py  entities.py  user_settings.py
ffun/ffun/queues/: __init__.py  domain.py  entities.py  operations.py  settings.py
ffun/ffun/resources/: domain.py  entities.py  errors.py  operations.py
ffun/ffun/scores/: domain.py  entities.py  errors.py  operations.py  rules.py
ffun/ffun/tags/: converters.py  domain.py  entities.py  errors.py  settings.py  utils.py
ffun/ffun/user_settings/: domain.py  entities.py  errors.py  operations.py  settings.py  types.py  values.py
ffun/ffun/users/: domain.py  entities.py  errors.py  operations.py
site/: README.md  (+9 more)
(+534 files in other folders)
