[tool.poetry]
name = "ffun"
version = "1.20.5"
description = "Backend for the Feeds Fun — web-based news reader"
repository = "https://github.com/Tiendil/feeds.fun"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = " BSD-3-Clause"
readme = "README.md"
homepage = "https://feeds.fun"
keywords = ["news", "news-reader", "news-aggregator",
            "rss", "rss-reader", "rss-aggregator",
            "feed", "feed-reader", "feed-aggregator",
            "atom", "self-hosted"]
classifiers = [
        "Environment :: Web Environment",
        "Framework :: AsyncIO",
        "Framework :: FastAPI",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: BSD License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Communications",
        "Topic :: Office/Business :: News/Diary",
        "Topic :: Text Processing",
        "Topic :: Text Processing :: Linguistic",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
        "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
        "Topic :: Internet :: WWW/HTTP :: HTTP Servers"]


[tool.poetry.dependencies]
python = "^3.13"

uvicorn = {extras = ["standard"], version = "0.*"}
fastapi = "0.115.*"
pydantic = "2.11.*"
pydantic-settings = "2.10.*"
typer = "0.16.*"

# upgrade furher are blocked by supertokens-python
httpx = "0.28.*"

brotlicffi = "1.1.*"
zstandard = "0.23.*"

openai = "1.91.*"
tiktoken = "0.9.*"

bidict = "0.23.*"

feedparser = "6.0.*"

beautifulsoup4 = "4.13.*"

async-lru = "2.0.*"

psycopg = "3.2.*"
psycopg-pool = "3.2.*"
yoyo-migrations = "9.0.*"
PyPika = "0.48.*"

structlog = "25.4.*"

python-multipart = "0.0.*"

supertokens-python = "0.30.0"

python-slugify = "8.0.*"

sentry-sdk = "2.33.*"

tabulate = "0.9.*"

cryptography = "45.0.*"

markdown = "3.8.*"

furl = "2.1.*"

tldextract = "5.3.*"

# TODO: move to dev dependencies?
python-frontmatter = "1.1.*"
toml = "0.10.*"
orjson = "3.10.*"

[tool.poetry.group.dev.dependencies]

changy = "0.*"

pytest = "8.4.*"
pytest-asyncio = "1.0.*"
pytest-mock = "3.14.*"

py-spy = "0.4.*"

respx = "0.22.*"

isort = "6.0.*"
black = "25.1.*"

flake8 = "7.3.*"
flake8-docstrings = "1.7.*"
flake8-functions = "0.0.*"
flake8-annotations-complexity = "0.1.*"
flake8-cognitive-complexity = "0.1.*"
flake8-pytest = "1.4.*"
flake8-bandit = "4.1.*"
flake8-absolute-import = "1.0.*"
flake8-print = "5.0.*"
flake8-pyproject = "1.2.*"
flake8-eradicate = "1.5.*"
autoflake = "2.3.*"

mypy = "1.16.*"

types-toml = "0.10.*"
types-python-slugify = "8.0.*"
types-setuptools = "80.9.*"
types-tabulate = "0.9.*"

[tool.poetry.scripts]

ffun = "ffun.cli.cli:app"

[tool.isort]
profile = "black"
line_length = 119

[tool.black]
line-length = 119

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
implicit_reexport = true
allow_untyped_calls = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "yoyo.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

# remove after updating to a new version
[[tool.mypy.overrides]]
module = "supertokens_python.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "furl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "orderedmultidict.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypika.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "frontmatter.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
# possibly it is not good option value, because we'll lose detecting of lost coroutines
# but for now it is required for some session-scoped fixtures
asyncio_default_fixture_loop_scope = "session"

addopts = """-x -vv --strict-markers -p no:cacheprovider"""

filterwarnings = [
  "error",
  "ignore::DeprecationWarning:feedparser.encodings:29",
  "ignore::DeprecationWarning:feedparser.html:152",
  "ignore::pytest.PytestDeprecationWarning:pytest_asyncio.plugin:208",
  "ignore::PendingDeprecationWarning:starlette:12"
]

[tool.flake8]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D200",
  "D400",
  "D401",
  "S101",
  "S113",
  "S311",
  "W503",
  "CFQ004",
  "E203",  # blake formats [x:y] with spaves
]
max-line-length = 119


[tool.autoflake]
in_place = true
remove_all_unused_imports = true
remove_unused_variables = true
recursive = true
